Task and Flow views

--- a/sm/machine/templates/machine/flow_detail.html
+++ b/sm/machine/templates/machine/flow_detail.html
@@ -1,3 +1,6 @@
+{% extends "machine/base.html" %}
+{% block content %}
+
 <h1>Flow {{ object.pk }}</h1>
 
 <ul>
@@ -12,6 +15,10 @@
 <h2>Routine {{ object.routine.name }}</h2>
 <ol>
     {% for task in object.get_tasks %}
-        <li>{{ task.name }} - {{ task.script }} - </li>
+        <li>
+            <a href="{% url 'task-detail' task.pk %}">{{ task.name }} - {{ task.script }}</a>
+        </li>
     {% endfor %}
 </ol>
+
+{% endblock content %}
