--- a/sm/machine/templates/machine/flow_list.html
+++ b/sm/machine/templates/machine/flow_list.html
@@ -1,5 +1,15 @@
+{% extends "machine/base.html" %}
+{% block content %}
+
+<h1>Flows</h1>
+
+<p>A Flow presents a Routine coupled with persistent execution values. A flow
+represents one routine run within the machine.</p>
+
 <ul>
     {% for flow in object_list %}
     <li><a href='{% url "flow-detail" flow.pk %}'>{{ flow }}</a></li>
     {% endfor %}
 </ul>
+
+{% endblock content %}
