--- a/sm/machine/templates/machine/flow_list.html
+++ b/sm/machine/templates/machine/flow_list.html
@@ -6,6 +6,8 @@
 <p>A Flow presents a Routine coupled with persistent execution values. A flow
 represents one routine run within the machine.</p>
 
+<a href="{% url 'flow-create-complex' %}">Complex Create</a>
+
 <ul>
     {% for flow in object_list %}
     <li><a href='{% url "flow-detail" flow.pk %}'>{{ flow }}</a></li>
